// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NestedTable component 1 renders as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NestedTable
    availableItems={
      Array [
        Object {
          "key": "clusterLabel",
          "value": Array [
            Object {
              "id": "cloud=IBM",
              "key": "cloud",
              "name": "cloud=IBM",
              "type": "clusterLabel",
              "value": "IBM",
            },
            Object {
              "id": "clusterip=9.42.23.230",
              "key": "clusterip",
              "name": "clusterip=9.42.23.230",
              "type": "clusterLabel",
              "value": "9.42.23.230",
            },
          ],
        },
      ]
    }
    header="header"
    selectedItems={
      Array [
        Object {
          "id": "cloud=IBM",
          "key": "cloud",
          "name": "cloud=IBM",
          "type": "clusterLabel",
          "value": "IBM",
        },
      ]
    }
    selectionChanged={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Table>
        <TableHead>
          <TableRow
            className="nested-table-header-row"
            header={true}
          >
            <TableHeader />
            <TableHeader
              className="nested-table-header"
            >
              <p>
                header
                  
              </p>
              <p>
                (
                1
                 
                Selected
                )
              </p>
            </TableHeader>
          </TableRow>
        </TableHead>
        <TableBody
          className="nested-table-body"
        >
          <TableRow
            className="nested-table-select-row"
            even={false}
            header={false}
          >
            <TableData
              className="nest-table-expand-icon"
              expanded={false}
              onClick={[Function]}
            />
            <TableData
              className="nest-table-expand-name"
            />
          </TableRow>
          <TableRowExpanded
            colSpan={4}
            expanded={false}
          >
            <Table>
              <TableBody>
                <TableRow
                  even={false}
                  header={false}
                >
                  <TableSelectRow
                    ariaLabel="tableSelectRow"
                    checked={true}
                    id="cloud=IBM"
                    name="cloud=IBM"
                    onSelect={[Function]}
                  />
                  <TableCell>
                    cloud=IBM
                  </TableCell>
                </TableRow>
                <TableRow
                  even={false}
                  header={false}
                >
                  <TableSelectRow
                    ariaLabel="tableSelectRow"
                    checked={false}
                    id="clusterip=9.42.23.230"
                    name="clusterip=9.42.23.230"
                    onSelect={[Function]}
                  />
                  <TableCell>
                    clusterip=9.42.23.230
                  </TableCell>
                </TableRow>
              </TableBody>
            </Table>
          </TableRowExpanded>
        </TableBody>
      </Table>,
      "className": "nested-table-main",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TableHead>
            <TableRow
              className="nested-table-header-row"
              header={true}
            >
              <TableHeader />
              <TableHeader
                className="nested-table-header"
              >
                <p>
                  header
                    
                </p>
                <p>
                  (
                  1
                   
                  Selected
                  )
                </p>
              </TableHeader>
            </TableRow>
          </TableHead>,
          <TableBody
            className="nested-table-body"
          >
            <TableRow
              className="nested-table-select-row"
              even={false}
              header={false}
            >
              <TableData
                className="nest-table-expand-icon"
                expanded={false}
                onClick={[Function]}
              />
              <TableData
                className="nest-table-expand-name"
              />
            </TableRow>
            <TableRowExpanded
              colSpan={4}
              expanded={false}
            >
              <Table>
                <TableBody>
                  <TableRow
                    even={false}
                    header={false}
                  >
                    <TableSelectRow
                      ariaLabel="tableSelectRow"
                      checked={true}
                      id="cloud=IBM"
                      name="cloud=IBM"
                      onSelect={[Function]}
                    />
                    <TableCell>
                      cloud=IBM
                    </TableCell>
                  </TableRow>
                  <TableRow
                    even={false}
                    header={false}
                  >
                    <TableSelectRow
                      ariaLabel="tableSelectRow"
                      checked={false}
                      id="clusterip=9.42.23.230"
                      name="clusterip=9.42.23.230"
                      onSelect={[Function]}
                    />
                    <TableCell>
                      clusterip=9.42.23.230
                    </TableCell>
                  </TableRow>
                </TableBody>
              </Table>
            </TableRowExpanded>
          </TableBody>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <TableRow
              className="nested-table-header-row"
              header={true}
            >
              <TableHeader />
              <TableHeader
                className="nested-table-header"
              >
                <p>
                  header
                    
                </p>
                <p>
                  (
                  1
                   
                  Selected
                  )
                </p>
              </TableHeader>
            </TableRow>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <TableHeader />,
                <TableHeader
                  className="nested-table-header"
                >
                  <p>
                    header
                      
                  </p>
                  <p>
                    (
                    1
                     
                    Selected
                    )
                  </p>
                </TableHeader>,
              ],
              "className": "nested-table-header-row",
              "header": true,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <p>
                      header
                        
                    </p>,
                    <p>
                      (
                      1
                       
                      Selected
                      )
                    </p>,
                  ],
                  "className": "nested-table-header",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "header",
                        "  ",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "header",
                      "  ",
                    ],
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "(",
                        1,
                        " ",
                        "Selected",
                        ")",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "(",
                      1,
                      " ",
                      "Selected",
                      ")",
                    ],
                    "type": "p",
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              Array [
                <TableRow
                  className="nested-table-select-row"
                  even={false}
                  header={false}
                >
                  <TableData
                    className="nest-table-expand-icon"
                    expanded={false}
                    onClick={[Function]}
                  />
                  <TableData
                    className="nest-table-expand-name"
                  />
                </TableRow>,
                <TableRowExpanded
                  colSpan={4}
                  expanded={false}
                >
                  <Table>
                    <TableBody>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={true}
                          id="cloud=IBM"
                          name="cloud=IBM"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          cloud=IBM
                        </TableCell>
                      </TableRow>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={false}
                          id="clusterip=9.42.23.230"
                          name="clusterip=9.42.23.230"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          clusterip=9.42.23.230
                        </TableCell>
                      </TableRow>
                    </TableBody>
                  </Table>
                </TableRowExpanded>,
              ],
            ],
            "className": "nested-table-body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "bclusterLabel",
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <TableData
                    className="nest-table-expand-icon"
                    expanded={false}
                    onClick={[Function]}
                  />,
                  <TableData
                    className="nest-table-expand-name"
                  />,
                ],
                "className": "nested-table-select-row",
                "even": false,
                "header": false,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "aclusterLabel",
                  "nodeType": "function",
                  "props": Object {
                    "className": "nest-table-expand-icon",
                    "expanded": false,
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "dclusterLabel",
                  "nodeType": "function",
                  "props": Object {
                    "children": undefined,
                    "className": "nest-table-expand-name",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "c0",
              "nodeType": "function",
              "props": Object {
                "children": <Table>
                  <TableBody>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={true}
                        id="cloud=IBM"
                        name="cloud=IBM"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        cloud=IBM
                      </TableCell>
                    </TableRow>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={false}
                        id="clusterip=9.42.23.230"
                        name="clusterip=9.42.23.230"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        clusterip=9.42.23.230
                      </TableCell>
                    </TableRow>
                  </TableBody>
                </Table>,
                "colSpan": 4,
                "expanded": false,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <TableBody>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={true}
                        id="cloud=IBM"
                        name="cloud=IBM"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        cloud=IBM
                      </TableCell>
                    </TableRow>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={false}
                        id="clusterip=9.42.23.230"
                        name="clusterip=9.42.23.230"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        clusterip=9.42.23.230
                      </TableCell>
                    </TableRow>
                  </TableBody>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={true}
                          id="cloud=IBM"
                          name="cloud=IBM"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          cloud=IBM
                        </TableCell>
                      </TableRow>,
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={false}
                          id="clusterip=9.42.23.230"
                          name="clusterip=9.42.23.230"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          clusterip=9.42.23.230
                        </TableCell>
                      </TableRow>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "cloud=IBM",
                      "nodeType": "function",
                      "props": Object {
                        "children": Array [
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={true}
                            id="cloud=IBM"
                            name="cloud=IBM"
                            onSelect={[Function]}
                          />,
                          <TableCell>
                            cloud=IBM
                          </TableCell>,
                        ],
                        "even": false,
                        "header": false,
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "function",
                          "props": Object {
                            "ariaLabel": "tableSelectRow",
                            "checked": true,
                            "id": "cloud=IBM",
                            "name": "cloud=IBM",
                            "onSelect": [Function],
                          },
                          "ref": null,
                          "rendered": null,
                          "type": [Function],
                        },
                        Object {
                          "instance": null,
                          "key": "IBM",
                          "nodeType": "function",
                          "props": Object {
                            "children": "cloud=IBM",
                          },
                          "ref": null,
                          "rendered": "cloud=IBM",
                          "type": [Function],
                        },
                      ],
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": "clusterip=9.42.23.230",
                      "nodeType": "function",
                      "props": Object {
                        "children": Array [
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={false}
                            id="clusterip=9.42.23.230"
                            name="clusterip=9.42.23.230"
                            onSelect={[Function]}
                          />,
                          <TableCell>
                            clusterip=9.42.23.230
                          </TableCell>,
                        ],
                        "even": false,
                        "header": false,
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "function",
                          "props": Object {
                            "ariaLabel": "tableSelectRow",
                            "checked": false,
                            "id": "clusterip=9.42.23.230",
                            "name": "clusterip=9.42.23.230",
                            "onSelect": [Function],
                          },
                          "ref": null,
                          "rendered": null,
                          "type": [Function],
                        },
                        Object {
                          "instance": null,
                          "key": "9.42.23.230",
                          "nodeType": "function",
                          "props": Object {
                            "children": "clusterip=9.42.23.230",
                          },
                          "ref": null,
                          "rendered": "clusterip=9.42.23.230",
                          "type": [Function],
                        },
                      ],
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Table>
          <TableHead>
            <TableRow
              className="nested-table-header-row"
              header={true}
            >
              <TableHeader />
              <TableHeader
                className="nested-table-header"
              >
                <p>
                  header
                    
                </p>
                <p>
                  (
                  1
                   
                  Selected
                  )
                </p>
              </TableHeader>
            </TableRow>
          </TableHead>
          <TableBody
            className="nested-table-body"
          >
            <TableRow
              className="nested-table-select-row"
              even={false}
              header={false}
            >
              <TableData
                className="nest-table-expand-icon"
                expanded={false}
                onClick={[Function]}
              />
              <TableData
                className="nest-table-expand-name"
              />
            </TableRow>
            <TableRowExpanded
              colSpan={4}
              expanded={false}
            >
              <Table>
                <TableBody>
                  <TableRow
                    even={false}
                    header={false}
                  >
                    <TableSelectRow
                      ariaLabel="tableSelectRow"
                      checked={true}
                      id="cloud=IBM"
                      name="cloud=IBM"
                      onSelect={[Function]}
                    />
                    <TableCell>
                      cloud=IBM
                    </TableCell>
                  </TableRow>
                  <TableRow
                    even={false}
                    header={false}
                  >
                    <TableSelectRow
                      ariaLabel="tableSelectRow"
                      checked={false}
                      id="clusterip=9.42.23.230"
                      name="clusterip=9.42.23.230"
                      onSelect={[Function]}
                    />
                    <TableCell>
                      clusterip=9.42.23.230
                    </TableCell>
                  </TableRow>
                </TableBody>
              </Table>
            </TableRowExpanded>
          </TableBody>
        </Table>,
        "className": "nested-table-main",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <TableHead>
              <TableRow
                className="nested-table-header-row"
                header={true}
              >
                <TableHeader />
                <TableHeader
                  className="nested-table-header"
                >
                  <p>
                    header
                      
                  </p>
                  <p>
                    (
                    1
                     
                    Selected
                    )
                  </p>
                </TableHeader>
              </TableRow>
            </TableHead>,
            <TableBody
              className="nested-table-body"
            >
              <TableRow
                className="nested-table-select-row"
                even={false}
                header={false}
              >
                <TableData
                  className="nest-table-expand-icon"
                  expanded={false}
                  onClick={[Function]}
                />
                <TableData
                  className="nest-table-expand-name"
                />
              </TableRow>
              <TableRowExpanded
                colSpan={4}
                expanded={false}
              >
                <Table>
                  <TableBody>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={true}
                        id="cloud=IBM"
                        name="cloud=IBM"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        cloud=IBM
                      </TableCell>
                    </TableRow>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={false}
                        id="clusterip=9.42.23.230"
                        name="clusterip=9.42.23.230"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        clusterip=9.42.23.230
                      </TableCell>
                    </TableRow>
                  </TableBody>
                </Table>
              </TableRowExpanded>
            </TableBody>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <TableRow
                className="nested-table-header-row"
                header={true}
              >
                <TableHeader />
                <TableHeader
                  className="nested-table-header"
                >
                  <p>
                    header
                      
                  </p>
                  <p>
                    (
                    1
                     
                    Selected
                    )
                  </p>
                </TableHeader>
              </TableRow>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <TableHeader />,
                  <TableHeader
                    className="nested-table-header"
                  >
                    <p>
                      header
                        
                    </p>
                    <p>
                      (
                      1
                       
                      Selected
                      )
                    </p>
                  </TableHeader>,
                ],
                "className": "nested-table-header-row",
                "header": true,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <p>
                        header
                          
                      </p>,
                      <p>
                        (
                        1
                         
                        Selected
                        )
                      </p>,
                    ],
                    "className": "nested-table-header",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "header",
                          "  ",
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "header",
                        "  ",
                      ],
                      "type": "p",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "(",
                          1,
                          " ",
                          "Selected",
                          ")",
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "(",
                        1,
                        " ",
                        "Selected",
                        ")",
                      ],
                      "type": "p",
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                Array [
                  <TableRow
                    className="nested-table-select-row"
                    even={false}
                    header={false}
                  >
                    <TableData
                      className="nest-table-expand-icon"
                      expanded={false}
                      onClick={[Function]}
                    />
                    <TableData
                      className="nest-table-expand-name"
                    />
                  </TableRow>,
                  <TableRowExpanded
                    colSpan={4}
                    expanded={false}
                  >
                    <Table>
                      <TableBody>
                        <TableRow
                          even={false}
                          header={false}
                        >
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={true}
                            id="cloud=IBM"
                            name="cloud=IBM"
                            onSelect={[Function]}
                          />
                          <TableCell>
                            cloud=IBM
                          </TableCell>
                        </TableRow>
                        <TableRow
                          even={false}
                          header={false}
                        >
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={false}
                            id="clusterip=9.42.23.230"
                            name="clusterip=9.42.23.230"
                            onSelect={[Function]}
                          />
                          <TableCell>
                            clusterip=9.42.23.230
                          </TableCell>
                        </TableRow>
                      </TableBody>
                    </Table>
                  </TableRowExpanded>,
                ],
              ],
              "className": "nested-table-body",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "bclusterLabel",
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <TableData
                      className="nest-table-expand-icon"
                      expanded={false}
                      onClick={[Function]}
                    />,
                    <TableData
                      className="nest-table-expand-name"
                    />,
                  ],
                  "className": "nested-table-select-row",
                  "even": false,
                  "header": false,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "aclusterLabel",
                    "nodeType": "function",
                    "props": Object {
                      "className": "nest-table-expand-icon",
                      "expanded": false,
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "dclusterLabel",
                    "nodeType": "function",
                    "props": Object {
                      "children": undefined,
                      "className": "nest-table-expand-name",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "c0",
                "nodeType": "function",
                "props": Object {
                  "children": <Table>
                    <TableBody>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={true}
                          id="cloud=IBM"
                          name="cloud=IBM"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          cloud=IBM
                        </TableCell>
                      </TableRow>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={false}
                          id="clusterip=9.42.23.230"
                          name="clusterip=9.42.23.230"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          clusterip=9.42.23.230
                        </TableCell>
                      </TableRow>
                    </TableBody>
                  </Table>,
                  "colSpan": 4,
                  "expanded": false,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <TableBody>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={true}
                          id="cloud=IBM"
                          name="cloud=IBM"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          cloud=IBM
                        </TableCell>
                      </TableRow>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={false}
                          id="clusterip=9.42.23.230"
                          name="clusterip=9.42.23.230"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          clusterip=9.42.23.230
                        </TableCell>
                      </TableRow>
                    </TableBody>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        <TableRow
                          even={false}
                          header={false}
                        >
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={true}
                            id="cloud=IBM"
                            name="cloud=IBM"
                            onSelect={[Function]}
                          />
                          <TableCell>
                            cloud=IBM
                          </TableCell>
                        </TableRow>,
                        <TableRow
                          even={false}
                          header={false}
                        >
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={false}
                            id="clusterip=9.42.23.230"
                            name="clusterip=9.42.23.230"
                            onSelect={[Function]}
                          />
                          <TableCell>
                            clusterip=9.42.23.230
                          </TableCell>
                        </TableRow>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": "cloud=IBM",
                        "nodeType": "function",
                        "props": Object {
                          "children": Array [
                            <TableSelectRow
                              ariaLabel="tableSelectRow"
                              checked={true}
                              id="cloud=IBM"
                              name="cloud=IBM"
                              onSelect={[Function]}
                            />,
                            <TableCell>
                              cloud=IBM
                            </TableCell>,
                          ],
                          "even": false,
                          "header": false,
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "function",
                            "props": Object {
                              "ariaLabel": "tableSelectRow",
                              "checked": true,
                              "id": "cloud=IBM",
                              "name": "cloud=IBM",
                              "onSelect": [Function],
                            },
                            "ref": null,
                            "rendered": null,
                            "type": [Function],
                          },
                          Object {
                            "instance": null,
                            "key": "IBM",
                            "nodeType": "function",
                            "props": Object {
                              "children": "cloud=IBM",
                            },
                            "ref": null,
                            "rendered": "cloud=IBM",
                            "type": [Function],
                          },
                        ],
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": "clusterip=9.42.23.230",
                        "nodeType": "function",
                        "props": Object {
                          "children": Array [
                            <TableSelectRow
                              ariaLabel="tableSelectRow"
                              checked={false}
                              id="clusterip=9.42.23.230"
                              name="clusterip=9.42.23.230"
                              onSelect={[Function]}
                            />,
                            <TableCell>
                              clusterip=9.42.23.230
                            </TableCell>,
                          ],
                          "even": false,
                          "header": false,
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "function",
                            "props": Object {
                              "ariaLabel": "tableSelectRow",
                              "checked": false,
                              "id": "clusterip=9.42.23.230",
                              "name": "clusterip=9.42.23.230",
                              "onSelect": [Function],
                            },
                            "ref": null,
                            "rendered": null,
                            "type": [Function],
                          },
                          Object {
                            "instance": null,
                            "key": "9.42.23.230",
                            "nodeType": "function",
                            "props": Object {
                              "children": "clusterip=9.42.23.230",
                            },
                            "ref": null,
                            "rendered": "clusterip=9.42.23.230",
                            "type": [Function],
                          },
                        ],
                        "type": [Function],
                      },
                    ],
                    "type": [Function],
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NestedTable component 1 renders as expected 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NestedTable
    availableItems={
      Array [
        Object {
          "key": "clusterLabel",
          "value": Array [
            Object {
              "id": "cloud=IBM",
              "key": "cloud",
              "name": "cloud=IBM",
              "type": "clusterLabel",
              "value": "IBM",
            },
            Object {
              "id": "clusterip=9.42.23.230",
              "key": "clusterip",
              "name": "clusterip=9.42.23.230",
              "type": "clusterLabel",
              "value": "9.42.23.230",
            },
          ],
        },
      ]
    }
    header="header"
    selectedItems={
      Array [
        Object {
          "id": "cloud=IBM",
          "key": "cloud",
          "name": "cloud=IBM",
          "type": "clusterLabel",
          "value": "IBM",
        },
      ]
    }
    selectionChanged={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Table>
        <TableHead>
          <TableRow
            className="nested-table-header-row"
            header={true}
          >
            <TableHeader />
            <TableHeader
              className="nested-table-header"
            >
              <p>
                header
                  
              </p>
              <p>
                (
                1
                 
                Selected
                )
              </p>
            </TableHeader>
          </TableRow>
        </TableHead>
        <TableBody
          className="nested-table-body"
        >
          <TableRow
            className="nested-table-select-row"
            even={false}
            header={false}
          >
            <TableData
              className="nest-table-expand-icon"
              expanded={true}
              onClick={[Function]}
            />
            <TableData
              className="nest-table-expand-name"
            />
          </TableRow>
          <TableRowExpanded
            colSpan={4}
            expanded={true}
          >
            <Table>
              <TableBody>
                <TableRow
                  even={false}
                  header={false}
                >
                  <TableSelectRow
                    ariaLabel="tableSelectRow"
                    checked={true}
                    id="cloud=IBM"
                    name="cloud=IBM"
                    onSelect={[Function]}
                  />
                  <TableCell>
                    cloud=IBM
                  </TableCell>
                </TableRow>
                <TableRow
                  even={false}
                  header={false}
                >
                  <TableSelectRow
                    ariaLabel="tableSelectRow"
                    checked={false}
                    id="clusterip=9.42.23.230"
                    name="clusterip=9.42.23.230"
                    onSelect={[Function]}
                  />
                  <TableCell>
                    clusterip=9.42.23.230
                  </TableCell>
                </TableRow>
              </TableBody>
            </Table>
          </TableRowExpanded>
        </TableBody>
      </Table>,
      "className": "nested-table-main",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TableHead>
            <TableRow
              className="nested-table-header-row"
              header={true}
            >
              <TableHeader />
              <TableHeader
                className="nested-table-header"
              >
                <p>
                  header
                    
                </p>
                <p>
                  (
                  1
                   
                  Selected
                  )
                </p>
              </TableHeader>
            </TableRow>
          </TableHead>,
          <TableBody
            className="nested-table-body"
          >
            <TableRow
              className="nested-table-select-row"
              even={false}
              header={false}
            >
              <TableData
                className="nest-table-expand-icon"
                expanded={true}
                onClick={[Function]}
              />
              <TableData
                className="nest-table-expand-name"
              />
            </TableRow>
            <TableRowExpanded
              colSpan={4}
              expanded={true}
            >
              <Table>
                <TableBody>
                  <TableRow
                    even={false}
                    header={false}
                  >
                    <TableSelectRow
                      ariaLabel="tableSelectRow"
                      checked={true}
                      id="cloud=IBM"
                      name="cloud=IBM"
                      onSelect={[Function]}
                    />
                    <TableCell>
                      cloud=IBM
                    </TableCell>
                  </TableRow>
                  <TableRow
                    even={false}
                    header={false}
                  >
                    <TableSelectRow
                      ariaLabel="tableSelectRow"
                      checked={false}
                      id="clusterip=9.42.23.230"
                      name="clusterip=9.42.23.230"
                      onSelect={[Function]}
                    />
                    <TableCell>
                      clusterip=9.42.23.230
                    </TableCell>
                  </TableRow>
                </TableBody>
              </Table>
            </TableRowExpanded>
          </TableBody>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <TableRow
              className="nested-table-header-row"
              header={true}
            >
              <TableHeader />
              <TableHeader
                className="nested-table-header"
              >
                <p>
                  header
                    
                </p>
                <p>
                  (
                  1
                   
                  Selected
                  )
                </p>
              </TableHeader>
            </TableRow>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <TableHeader />,
                <TableHeader
                  className="nested-table-header"
                >
                  <p>
                    header
                      
                  </p>
                  <p>
                    (
                    1
                     
                    Selected
                    )
                  </p>
                </TableHeader>,
              ],
              "className": "nested-table-header-row",
              "header": true,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <p>
                      header
                        
                    </p>,
                    <p>
                      (
                      1
                       
                      Selected
                      )
                    </p>,
                  ],
                  "className": "nested-table-header",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "header",
                        "  ",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "header",
                      "  ",
                    ],
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "(",
                        1,
                        " ",
                        "Selected",
                        ")",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "(",
                      1,
                      " ",
                      "Selected",
                      ")",
                    ],
                    "type": "p",
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              Array [
                <TableRow
                  className="nested-table-select-row"
                  even={false}
                  header={false}
                >
                  <TableData
                    className="nest-table-expand-icon"
                    expanded={true}
                    onClick={[Function]}
                  />
                  <TableData
                    className="nest-table-expand-name"
                  />
                </TableRow>,
                <TableRowExpanded
                  colSpan={4}
                  expanded={true}
                >
                  <Table>
                    <TableBody>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={true}
                          id="cloud=IBM"
                          name="cloud=IBM"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          cloud=IBM
                        </TableCell>
                      </TableRow>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={false}
                          id="clusterip=9.42.23.230"
                          name="clusterip=9.42.23.230"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          clusterip=9.42.23.230
                        </TableCell>
                      </TableRow>
                    </TableBody>
                  </Table>
                </TableRowExpanded>,
              ],
            ],
            "className": "nested-table-body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "bclusterLabel",
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <TableData
                    className="nest-table-expand-icon"
                    expanded={true}
                    onClick={[Function]}
                  />,
                  <TableData
                    className="nest-table-expand-name"
                  />,
                ],
                "className": "nested-table-select-row",
                "even": false,
                "header": false,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "aclusterLabel",
                  "nodeType": "function",
                  "props": Object {
                    "className": "nest-table-expand-icon",
                    "expanded": true,
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "dclusterLabel",
                  "nodeType": "function",
                  "props": Object {
                    "children": undefined,
                    "className": "nest-table-expand-name",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "c0",
              "nodeType": "function",
              "props": Object {
                "children": <Table>
                  <TableBody>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={true}
                        id="cloud=IBM"
                        name="cloud=IBM"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        cloud=IBM
                      </TableCell>
                    </TableRow>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={false}
                        id="clusterip=9.42.23.230"
                        name="clusterip=9.42.23.230"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        clusterip=9.42.23.230
                      </TableCell>
                    </TableRow>
                  </TableBody>
                </Table>,
                "colSpan": 4,
                "expanded": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <TableBody>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={true}
                        id="cloud=IBM"
                        name="cloud=IBM"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        cloud=IBM
                      </TableCell>
                    </TableRow>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={false}
                        id="clusterip=9.42.23.230"
                        name="clusterip=9.42.23.230"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        clusterip=9.42.23.230
                      </TableCell>
                    </TableRow>
                  </TableBody>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={true}
                          id="cloud=IBM"
                          name="cloud=IBM"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          cloud=IBM
                        </TableCell>
                      </TableRow>,
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={false}
                          id="clusterip=9.42.23.230"
                          name="clusterip=9.42.23.230"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          clusterip=9.42.23.230
                        </TableCell>
                      </TableRow>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "cloud=IBM",
                      "nodeType": "function",
                      "props": Object {
                        "children": Array [
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={true}
                            id="cloud=IBM"
                            name="cloud=IBM"
                            onSelect={[Function]}
                          />,
                          <TableCell>
                            cloud=IBM
                          </TableCell>,
                        ],
                        "even": false,
                        "header": false,
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "function",
                          "props": Object {
                            "ariaLabel": "tableSelectRow",
                            "checked": true,
                            "id": "cloud=IBM",
                            "name": "cloud=IBM",
                            "onSelect": [Function],
                          },
                          "ref": null,
                          "rendered": null,
                          "type": [Function],
                        },
                        Object {
                          "instance": null,
                          "key": "IBM",
                          "nodeType": "function",
                          "props": Object {
                            "children": "cloud=IBM",
                          },
                          "ref": null,
                          "rendered": "cloud=IBM",
                          "type": [Function],
                        },
                      ],
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": "clusterip=9.42.23.230",
                      "nodeType": "function",
                      "props": Object {
                        "children": Array [
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={false}
                            id="clusterip=9.42.23.230"
                            name="clusterip=9.42.23.230"
                            onSelect={[Function]}
                          />,
                          <TableCell>
                            clusterip=9.42.23.230
                          </TableCell>,
                        ],
                        "even": false,
                        "header": false,
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "function",
                          "props": Object {
                            "ariaLabel": "tableSelectRow",
                            "checked": false,
                            "id": "clusterip=9.42.23.230",
                            "name": "clusterip=9.42.23.230",
                            "onSelect": [Function],
                          },
                          "ref": null,
                          "rendered": null,
                          "type": [Function],
                        },
                        Object {
                          "instance": null,
                          "key": "9.42.23.230",
                          "nodeType": "function",
                          "props": Object {
                            "children": "clusterip=9.42.23.230",
                          },
                          "ref": null,
                          "rendered": "clusterip=9.42.23.230",
                          "type": [Function],
                        },
                      ],
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Table>
          <TableHead>
            <TableRow
              className="nested-table-header-row"
              header={true}
            >
              <TableHeader />
              <TableHeader
                className="nested-table-header"
              >
                <p>
                  header
                    
                </p>
                <p>
                  (
                  1
                   
                  Selected
                  )
                </p>
              </TableHeader>
            </TableRow>
          </TableHead>
          <TableBody
            className="nested-table-body"
          >
            <TableRow
              className="nested-table-select-row"
              even={false}
              header={false}
            >
              <TableData
                className="nest-table-expand-icon"
                expanded={true}
                onClick={[Function]}
              />
              <TableData
                className="nest-table-expand-name"
              />
            </TableRow>
            <TableRowExpanded
              colSpan={4}
              expanded={true}
            >
              <Table>
                <TableBody>
                  <TableRow
                    even={false}
                    header={false}
                  >
                    <TableSelectRow
                      ariaLabel="tableSelectRow"
                      checked={true}
                      id="cloud=IBM"
                      name="cloud=IBM"
                      onSelect={[Function]}
                    />
                    <TableCell>
                      cloud=IBM
                    </TableCell>
                  </TableRow>
                  <TableRow
                    even={false}
                    header={false}
                  >
                    <TableSelectRow
                      ariaLabel="tableSelectRow"
                      checked={false}
                      id="clusterip=9.42.23.230"
                      name="clusterip=9.42.23.230"
                      onSelect={[Function]}
                    />
                    <TableCell>
                      clusterip=9.42.23.230
                    </TableCell>
                  </TableRow>
                </TableBody>
              </Table>
            </TableRowExpanded>
          </TableBody>
        </Table>,
        "className": "nested-table-main",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <TableHead>
              <TableRow
                className="nested-table-header-row"
                header={true}
              >
                <TableHeader />
                <TableHeader
                  className="nested-table-header"
                >
                  <p>
                    header
                      
                  </p>
                  <p>
                    (
                    1
                     
                    Selected
                    )
                  </p>
                </TableHeader>
              </TableRow>
            </TableHead>,
            <TableBody
              className="nested-table-body"
            >
              <TableRow
                className="nested-table-select-row"
                even={false}
                header={false}
              >
                <TableData
                  className="nest-table-expand-icon"
                  expanded={true}
                  onClick={[Function]}
                />
                <TableData
                  className="nest-table-expand-name"
                />
              </TableRow>
              <TableRowExpanded
                colSpan={4}
                expanded={true}
              >
                <Table>
                  <TableBody>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={true}
                        id="cloud=IBM"
                        name="cloud=IBM"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        cloud=IBM
                      </TableCell>
                    </TableRow>
                    <TableRow
                      even={false}
                      header={false}
                    >
                      <TableSelectRow
                        ariaLabel="tableSelectRow"
                        checked={false}
                        id="clusterip=9.42.23.230"
                        name="clusterip=9.42.23.230"
                        onSelect={[Function]}
                      />
                      <TableCell>
                        clusterip=9.42.23.230
                      </TableCell>
                    </TableRow>
                  </TableBody>
                </Table>
              </TableRowExpanded>
            </TableBody>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <TableRow
                className="nested-table-header-row"
                header={true}
              >
                <TableHeader />
                <TableHeader
                  className="nested-table-header"
                >
                  <p>
                    header
                      
                  </p>
                  <p>
                    (
                    1
                     
                    Selected
                    )
                  </p>
                </TableHeader>
              </TableRow>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <TableHeader />,
                  <TableHeader
                    className="nested-table-header"
                  >
                    <p>
                      header
                        
                    </p>
                    <p>
                      (
                      1
                       
                      Selected
                      )
                    </p>
                  </TableHeader>,
                ],
                "className": "nested-table-header-row",
                "header": true,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <p>
                        header
                          
                      </p>,
                      <p>
                        (
                        1
                         
                        Selected
                        )
                      </p>,
                    ],
                    "className": "nested-table-header",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "header",
                          "  ",
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "header",
                        "  ",
                      ],
                      "type": "p",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "(",
                          1,
                          " ",
                          "Selected",
                          ")",
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "(",
                        1,
                        " ",
                        "Selected",
                        ")",
                      ],
                      "type": "p",
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                Array [
                  <TableRow
                    className="nested-table-select-row"
                    even={false}
                    header={false}
                  >
                    <TableData
                      className="nest-table-expand-icon"
                      expanded={true}
                      onClick={[Function]}
                    />
                    <TableData
                      className="nest-table-expand-name"
                    />
                  </TableRow>,
                  <TableRowExpanded
                    colSpan={4}
                    expanded={true}
                  >
                    <Table>
                      <TableBody>
                        <TableRow
                          even={false}
                          header={false}
                        >
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={true}
                            id="cloud=IBM"
                            name="cloud=IBM"
                            onSelect={[Function]}
                          />
                          <TableCell>
                            cloud=IBM
                          </TableCell>
                        </TableRow>
                        <TableRow
                          even={false}
                          header={false}
                        >
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={false}
                            id="clusterip=9.42.23.230"
                            name="clusterip=9.42.23.230"
                            onSelect={[Function]}
                          />
                          <TableCell>
                            clusterip=9.42.23.230
                          </TableCell>
                        </TableRow>
                      </TableBody>
                    </Table>
                  </TableRowExpanded>,
                ],
              ],
              "className": "nested-table-body",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "bclusterLabel",
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <TableData
                      className="nest-table-expand-icon"
                      expanded={true}
                      onClick={[Function]}
                    />,
                    <TableData
                      className="nest-table-expand-name"
                    />,
                  ],
                  "className": "nested-table-select-row",
                  "even": false,
                  "header": false,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "aclusterLabel",
                    "nodeType": "function",
                    "props": Object {
                      "className": "nest-table-expand-icon",
                      "expanded": true,
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "dclusterLabel",
                    "nodeType": "function",
                    "props": Object {
                      "children": undefined,
                      "className": "nest-table-expand-name",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "c0",
                "nodeType": "function",
                "props": Object {
                  "children": <Table>
                    <TableBody>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={true}
                          id="cloud=IBM"
                          name="cloud=IBM"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          cloud=IBM
                        </TableCell>
                      </TableRow>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={false}
                          id="clusterip=9.42.23.230"
                          name="clusterip=9.42.23.230"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          clusterip=9.42.23.230
                        </TableCell>
                      </TableRow>
                    </TableBody>
                  </Table>,
                  "colSpan": 4,
                  "expanded": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <TableBody>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={true}
                          id="cloud=IBM"
                          name="cloud=IBM"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          cloud=IBM
                        </TableCell>
                      </TableRow>
                      <TableRow
                        even={false}
                        header={false}
                      >
                        <TableSelectRow
                          ariaLabel="tableSelectRow"
                          checked={false}
                          id="clusterip=9.42.23.230"
                          name="clusterip=9.42.23.230"
                          onSelect={[Function]}
                        />
                        <TableCell>
                          clusterip=9.42.23.230
                        </TableCell>
                      </TableRow>
                    </TableBody>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        <TableRow
                          even={false}
                          header={false}
                        >
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={true}
                            id="cloud=IBM"
                            name="cloud=IBM"
                            onSelect={[Function]}
                          />
                          <TableCell>
                            cloud=IBM
                          </TableCell>
                        </TableRow>,
                        <TableRow
                          even={false}
                          header={false}
                        >
                          <TableSelectRow
                            ariaLabel="tableSelectRow"
                            checked={false}
                            id="clusterip=9.42.23.230"
                            name="clusterip=9.42.23.230"
                            onSelect={[Function]}
                          />
                          <TableCell>
                            clusterip=9.42.23.230
                          </TableCell>
                        </TableRow>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": "cloud=IBM",
                        "nodeType": "function",
                        "props": Object {
                          "children": Array [
                            <TableSelectRow
                              ariaLabel="tableSelectRow"
                              checked={true}
                              id="cloud=IBM"
                              name="cloud=IBM"
                              onSelect={[Function]}
                            />,
                            <TableCell>
                              cloud=IBM
                            </TableCell>,
                          ],
                          "even": false,
                          "header": false,
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "function",
                            "props": Object {
                              "ariaLabel": "tableSelectRow",
                              "checked": true,
                              "id": "cloud=IBM",
                              "name": "cloud=IBM",
                              "onSelect": [Function],
                            },
                            "ref": null,
                            "rendered": null,
                            "type": [Function],
                          },
                          Object {
                            "instance": null,
                            "key": "IBM",
                            "nodeType": "function",
                            "props": Object {
                              "children": "cloud=IBM",
                            },
                            "ref": null,
                            "rendered": "cloud=IBM",
                            "type": [Function],
                          },
                        ],
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": "clusterip=9.42.23.230",
                        "nodeType": "function",
                        "props": Object {
                          "children": Array [
                            <TableSelectRow
                              ariaLabel="tableSelectRow"
                              checked={false}
                              id="clusterip=9.42.23.230"
                              name="clusterip=9.42.23.230"
                              onSelect={[Function]}
                            />,
                            <TableCell>
                              clusterip=9.42.23.230
                            </TableCell>,
                          ],
                          "even": false,
                          "header": false,
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "function",
                            "props": Object {
                              "ariaLabel": "tableSelectRow",
                              "checked": false,
                              "id": "clusterip=9.42.23.230",
                              "name": "clusterip=9.42.23.230",
                              "onSelect": [Function],
                            },
                            "ref": null,
                            "rendered": null,
                            "type": [Function],
                          },
                          Object {
                            "instance": null,
                            "key": "9.42.23.230",
                            "nodeType": "function",
                            "props": Object {
                              "children": "clusterip=9.42.23.230",
                            },
                            "ref": null,
                            "rendered": "clusterip=9.42.23.230",
                            "type": [Function],
                          },
                        ],
                        "type": [Function],
                      },
                    ],
                    "type": [Function],
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
